fix overflow hidden

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+body {
+  overflow-x: hidden;
+}
 .main {
   min-height: 100vh;
   width: 100%;
@@ -8,6 +11,7 @@
   margin: auto;
   position: relative;
   background-color: #eee;
+  overflow-x: hidden;
 }
 .swiper-pagination {
   position: absolute;
